--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -155,7 +155,7 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
   
 
 
- \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}
+ \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp2_bunch_length}
 
  % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
   \begin{figure}[htp]
