--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -104,6 +104,46 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
  \end{figure}
  
 
+ \subsection{Experiment III: restoring the emittance growth rate predicted from Mastoridis--Baudrenghien model}\label{subsec:emit_growth_cc_md_sep2022}
+ The individual measurements of the transverse emittance evolution for each octupole setting during the experiment with $\CC$ RF noise that took place on September 12, 2022 (see Section~\ref{sec:cc_md_Sep2022}) are illustrated in Fig.~\ref{fig:cc_md_12sep2022_overview_plots_klod_scan}. The subplots are plotted in chronological order.
+ 
+ The measurements were conducted with artifical noise injected in the $\CC$ RF system which was a mixture of amplitude and phase noise. The phase noise was always dominant. The amplitude and phase noise level at the betatron frequency were measured to be -123.3\,dBc/Hz and -103.3\,dBc/Hz respectively. %The measurements were done with a spectrum analyzer connected directly to the $\CC$ antena.
+ 
+ % Location of figures: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_12Sep2022/ws_emittance_growth/figures_for_thesis
+ % Plotting sctipt: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_12Sep2022/ws_emittance_growth/plot_emitGrowth_vs_time_for_thesis.py. But I run it in afs in my public location
+ \begin{figure}[htp]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/cc_md_12sep22_coast6.png}  
+        \caption{$k_\mathrm{LOD}=-30 \mathrm{/m^{4}}$}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/cc_md_12sep22_coast7.png}  
+        \caption{$k_\mathrm{LOD}=-20 \mathrm{/m^{4}}$}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/cc_md_12sep22_coast8.png}  
+        \caption{$k_\mathrm{LOD}=-10  \mathrm{/m^{4}}$}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{images/app_c/cc_md_12sep22_coast9.png}  
+            \caption{$k_\mathrm{LOD}=+30  \mathrm{/m^{4}}$}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/cc_md_12sep22_coast11.png}  
+        \caption{$k_\mathrm{LOD}=+10 \mathrm{/m^{4}}$}
+    \end{subfigure}
+    \caption{Horizontal (blue) and vertical (red) emittance evolution of a single bunch during the experiment with dipole noise on September 12, 2022.  The different octupole settings are displayed at the captions of each plot.}
+    \label{fig:cc_md_12sep2022_overview_plots_klod_scan}
+ \end{figure}
+ 
+ 
+
  \section{Bunch length measurements}\label{sec:bunch_length_meas_2022}
 
 
