start Hannes' corrections

--- a/main.tex
+++ b/main.tex
@@ -122,7 +122,7 @@
 %\chapter{Crab Cavities in the SPS: machine set up and Crab Cavity calibration}\label{Ch:CC_set_up}
 %\input{chapters/chapter04}
 
-\chapter{Experimental studies 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_analyisis}
+\chapter{Experimental studies from 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_analyisis}
 \input{chapters/chapter05}
 
 %\chapter{Emittance growth studies 2018: Operational setup/preparation and beam instrumentation}\label{Ch:2018_setup}
@@ -134,7 +134,7 @@
 \chapter{Simulation studies: Emittance growth suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
 \input{chapters/chapter07}
 
-\chapter{Experimental studies 2022: investigation of the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
+\chapter{Experimental studies from 2022: investigation of the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
 \input{chapters/chapter08}
 
 \chapter{Conclusions}
