--- a/references.bib
+++ b/references.bib
@@ -1039,6 +1039,14 @@ URL = {https://liverpool.idm.oclc.org/login?url=https://search.ebscohost.com/log
 Year = {2013},
 }
 
+@inproceedings{Shaposhnikova:2016cix,
+    author = "Shaposhnikova, Elena and others",
+    title = "{LHC Injectors Upgrade (LIU) Project at CERN}",
+    booktitle = "{7th International Particle Accelerator Conference}",
+    doi = "10.18429/JACoW-IPAC2016-MOPOY059",
+    pages = "MOPOY059",
+    year = "2016"
+}
 
 @book{a_numerical_recipies,
 author = {Press, William H. and Teukolsky, Saul A. and Vetterling, William T. and Flannery, Brian P.},
