finish experiment III

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -195,7 +195,7 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
   
 
 
- \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp2_bunch_length}
+ \subsection{Experiment II: restoring the emittance growth rate predicted from Mastoridis--Baudrenghien model}\label{subsec:2022_exp2_bunch_length}
 
  % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
   \begin{figure}[htp]
@@ -361,7 +361,7 @@ The average measured bunch length over all above coasts in 2022, was found to be
  The average measured intensity over all above coasts on May 16, 2022 (Experiment III) was found to be 2.9$\times 10^{10}$\,protons per bunch. 
  
 
- \subsection{Experiment III: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp3_intensity}
+ \subsection{Experiment III: restoring the emittance growth rate predicted from Mastoridis--Baudrenghien model}\label{subsec:2022_exp3_intensity}
 
  \begin{figure}[htp]
     \centering
