add bunch length evolution exp

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -307,6 +307,23 @@ The average measured bunch length over all above coasts in 2022, was found to be
 
 
 
+
+
+\subsection{Experiment IV: emittance growth measurements driven primarily by amplitude noise}\label{subsec:2022_exp4_bunch_length}
+
+\begin{figure}[!h]
+    \centering         §
+    \includegraphics[width=0.6\textwidth]{images/app_e/sps_cc_md_12sep_COAST_12.png}
+        \caption{Evolution of the bunch length during the CC Experiment IV on September 12, 2022.}
+        \label{fig:bunch_length_exp4}
+ \end{figure}
+ 
+
+
+The average measured bunch length over all above coasts in 2022, was found to be, 4$\sigma_t$=1.75\,ns. 
+
+
+
  \section{Intensity measurements}\label{sec:intensity_meas_2022}
 
  The intensity measurements presented in the section were acquired using the 
