--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -311,7 +311,7 @@ The average measured bunch length over all above coasts in 2022, was found to be
 
 \subsection{Experiment IV: emittance growth measurements driven primarily by amplitude noise}\label{subsec:2022_exp4_bunch_length}
 
-\begin{figure}[!h]
+\begin{figure}[h]
     \centering         §
     \includegraphics[width=0.6\textwidth]{images/app_e/sps_cc_md_12sep_COAST_12.png}
         \caption{Evolution of the bunch length during the CC Experiment IV on September 12, 2022.}
@@ -320,7 +320,7 @@ The average measured bunch length over all above coasts in 2022, was found to be
  
 
 
-The average measured bunch length over all above coasts in 2022, was found to be, 4$\sigma_t$=1.75\,ns. 
+The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.75\,ns. 
 
 
 
@@ -445,3 +445,18 @@ The average measured bunch length over all above coasts in 2022, was found to be
  \end{figure}
 
  The average measured intensity over all above coasts on September 12, 2022 (Experiments III) was found to be 2.5$\times 10^{10}$\,protons per bunch. 
+
+
+
+\subsection{Experiment IV: emittance growth measurements driven primarily by amplitude noise}\label{subsec:2022_exp4_intensity}
+
+\begin{figure}[h]
+    \centering         §
+    \includegraphics[width=0.6\textwidth]{images/app_e/intensity_cc_md_12Sep22_coast_12.png}
+        \caption{Evolution of the intensity during the CC Experiment IV on September 12, 2022.}
+        \label{fig:bunch_length_exp4}
+ \end{figure}
+ 
+
+
+The average intensity over the coast was found to be, 2.4$\times 10^{10}$ protons per bunch. 
