--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -132,7 +132,7 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
  \end{figure}
  
 
- \subsection{Experiment III: restoring the emittance growth rate predicted from Mastoridis--Baudrenghien model}\label{subsec:emit_growth_cc_md_sep2022}
+ \subsection{Experiment III: emittance growth measurements in the presence of strong octupoles}\label{subsec:emit_growth_cc_md_sep2022}
  The individual measurements of the transverse emittance evolution for each octupole setting during the experiment with $\CC$ RF noise that took place on September 12, 2022 (see Section~\ref{sec:cc_md_Sep2022}) are illustrated in Fig.~\ref{fig:cc_md_12sep2022_overview_plots_klod_scan}. The subplots are plotted in chronological order.
  
  The measurements were conducted with artifical noise injected in the $\CC$ RF system which was a mixture of amplitude and phase noise. The phase noise was always dominant. The amplitude and phase noise level at the betatron frequency were measured to be -123.3\,dBc/Hz and -103.3\,dBc/Hz respectively. %The measurements were done with a spectrum analyzer connected directly to the $\CC$ antena.
@@ -272,7 +272,7 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
   
 
 
- \subsection{Experiment II: restoring the emittance growth rate predicted from Mastoridis--Baudrenghien model}\label{subsec:2022_exp2_bunch_length}
+ \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp2_bunch_length}
 
  % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
   \begin{figure}[htp]
@@ -311,7 +311,7 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
  
  
 
- \subsection{Experiment III: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp3_bunch_length}
+ \subsection{Experiment III: emittance growth measurements in the presence of strong octupoles}\label{subsec:2022_exp3_bunch_length}
 
  % Plotting script: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_12Sep2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
  % Figures location: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_12Sep2022/longitudinal_profiles/figures_for_thesis
@@ -455,7 +455,7 @@ The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.
  The average measured intensity over all above coasts on May 16, 2022 (Experiment III) was found to be 2.9$\times 10^{10}$\,protons per bunch. 
  
 
- \subsection{Experiment III: restoring the emittance growth rate predicted from Mastoridis--Baudrenghien model}\label{subsec:2022_exp3_intensity}
+ \subsection{Experiment III: emittance growth measurements in the presence of strong octupoles}\label{subsec:2022_exp3_intensity}
 
  \begin{figure}[htp]
     \centering
