add explanation about BCT an FBCT

--- a/references.bib
+++ b/references.bib
@@ -1039,6 +1039,30 @@ URL = {https://liverpool.idm.oclc.org/login?url=https://search.ebscohost.com/log
 Year = {2013},
 }
 
+@article{Jakob:624188,
+      author        = "Jakob, H and Savioz, J J and Jones, R and Jensen, L",
+      title         = "{A 40 MHz Bunch by Bunch Intensity Measurement for the
+                       CERN SPS and LHC}",
+      reportNumber  = "CERN-AB-2003-056-BDI",
+      pages         = "4 p",
+      year          = "2003",
+      url           = "https://cds.cern.ch/record/624188",
+}
+
+@article{Jones:1982418,
+      author        = "Jones, R and Gasior, M and Lefevre, T and Schmickler, H
+                       and Wittenburg, K",
+      title         = "{Introduction to beam instrumentation and diagnostics}",
+      reportNumber  = "arXiv:1601.04907",
+      pages         = "38 p",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1982418",
+      note          = "Comments: 38 pages, contribution to the CAS - CERN
+                       Accelerator School: Advanced Accelerator Physics Course,
+                       Trondheim, Norway, 18-29 Aug 2013",
+      doi           = "10.5170/CERN-2014-009.23",
+}
+
 @inproceedings{Shaposhnikova:2016cix,
     author = "Shaposhnikova, Elena and others",
     title = "{LHC Injectors Upgrade (LIU) Project at CERN}",
