add details on the wall current monitor

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -224,17 +224,13 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
  \section{Bunch length measurements}\label{sec:bunch_length_meas_2022}
 
 
+ The bunch length measurements presented in this section were performed with the Wall Current monitor. The Wall Current Monitor (WCM) acquires the longitudinal bunch profiles and uses a Gaussian fit for the evaluation of the bunch length. Each data point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 acquisitions, while the error bars indicate the standard deviation.
 
- The bunch length measurements presented in this section were performed with the Wall Current monitor. The Wall Current monitor acquires the longitudinal bunch profiles and uses a Gaussian fit for the evaluation of the bunch length. Each point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 consecutive acquisitions are  
-
+ Further details on the Wall Current Monitors that are installed in the CERN Proton Synchrotron (PS) and Large Hadron Collider (LHC) can be found in~\cite{Belleman:2313362, Argyropoulos:2752314}. The device installed in the SPS follows the same working principle. 
 
 
  %https://accelconf.web.cern.ch/e08/papers/thpc144.pdf (from email communication with IVAN)
  
- AND USES A GAUSSIAN FIT FOR THE EVALUATION O
- 
- once per turn
-
 
 
  \subsection{Experiment I: dependece of emittance growth on CC RF noise power}\label{subsec:2022_exp1_bunch_length}
