--- a/references.bib
+++ b/references.bib
@@ -1063,6 +1063,27 @@ Year = {2013},
       doi           = "10.5170/CERN-2014-009.23",
 }
 
+
+@article{Belleman:2313362,
+      author        = "Belleman, Jeroen and Andreazza, William and Nosych,
+                       Andriy",
+      title         = "{A New Wall Current Monitor for the CERN Proton
+                       Synchrotron}",
+      pages         = "MOPG41. 4 p",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2313362",
+      doi           = "10.18429/JACoW-IBIC2016-MOPG41",
+}
+
+@article{Argyropoulos:2752314,
+      author        = "Argyropoulos, T",
+      title         = "{Longitudinal beam quality monitoring}",
+      pages         = "6 p",
+      year          = "2020",
+      url           = "https://cds.cern.ch/record/2752314",
+      doi           = "10.23732/CYRCP-2020-009.156",
+}
+
 @inproceedings{Shaposhnikova:2016cix,
     author = "Shaposhnikova, Elena and others",
     title = "{LHC Injectors Upgrade (LIU) Project at CERN}",
