add info on bctdc

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -371,12 +371,7 @@ The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.
 
  \section{Intensity measurements}\label{sec:intensity_meas_2022}
 
- The intensity measurements presented in the section were acquired using the 
-
-
-
- w. The longitudinal bunch profiles were acquired every turn using a wall
- The bunch length measurements presented in this section were performed with the Wall Current monitor. The Wall Current monitor acquires the longitudinal bunch profiles and uses a Gaussian fit for the evaluation of the bunch length. Each point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 consecutive acquisitions are  
+ The intensity measurements presented in the section were acquired using the  Beam Current Transformer (in particular with the device SPS.BCTDC.41435) which is installed in the SPS machine. The Beam Current Transformer measures the beam induced current in its ferrite core and transforms it to the number of protons per beam. Fruther details on their working principle and operation can be found in~\cite{Jones:1982418, Jakob:624188}.  
 
 
  \subsection{Experiment I: dependece of emittance growth on CC RF noise power}\label{subsec:2022_exp1_intensity}
