--- a/main.tex
+++ b/main.tex
@@ -137,7 +137,7 @@
 \chapter{Experimental studies from 2022: investigation of the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
 \input{chapters/chapter08}
 
-\chapter{Conclusions}
+\chapter{Conclusions}\label{Ch:conclusions}
 \input{chapters/chapter09}
 
 % The end matter
