--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -4,8 +4,32 @@
 \markboth{Abstract}{Abstract}
 \addcontentsline{toc}{chapter}{Abstract} % adds an entry to the table of contents
 % put your text here
-%\lipsum[1-2]
 
+High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC) which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. HL-LHC will employ Crab Cavities in order to compensate the luminosity reduction coming from the crossing angle at the interaction points of ATLAS and CMS. The Crab Cavities are expected to result to some undesired emittance growth due to noise in their RF system which would result to luminosity loss. 
+
+Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation to the LHC, in order ot be tested for the first time with proton beams.  
+
+
+This work
+
+experimental first beam dynamics with CCs
+
+investigates the limitations of the model
+
+revealed a new mechanism of emittance growth suppression from the beam transverse ipedance
+
+
+investigate the interplay with impedance and amplitude dependent tune spread (experimetnally and in simulations)
+
+
+its limitations, 
+
+interplay with imepdance and amplitude dependent tune spread
+
+%\lipsum[1-2]
+test
+
+Move here the paragraph why the studies are perfromed in the sps. conclusion or the introduction.
 
 %\textbf{Probably put to abstract}\\
 %In 2018, two prototype Crab Cavities (CCs) were installed in the SPS to be tested for the first time with proton beams. A series of dedicated machine developemnt studies was carried out in order to validate their working principle and answer various beam dynamic questions. One of the operational issues that needed to be addressed concerned the expected emittance growth due to noise in their RF system, which is the main subject this thesis.  As mentioned in chapter~\ref{Ch:CC_noise_theory} a theoretical model had already been developed and validated by trackig simulations~\cite{PhysRevSTAB.18.101001}. 
