--- a/main.tex
+++ b/main.tex
@@ -80,9 +80,10 @@
 \maketitle
 \newpage
 
+%Aknowledgments
+\input{head/acknowledgments}
 % Abstract
 \input{head/abstract}
-\input{head/acknowledgments}
 
 \tableofcontents
 
