add symbols in list of symbols

--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -7,7 +7,7 @@
 
 High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC) which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. HL-LHC will employ Crab Cavities in order to compensate the luminosity reduction coming from the crossing angle at the interaction points of ATLAS and CMS. The Crab Cavities are expected to result to some undesired emittance growth due to noise in their RF system which would result to luminosity loss. 
 
-Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation to the LHC, in order ot be tested for the first time with proton beams.  
+Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation to the LHC, in order to be tested for the first time with proton beams.  
 
 
 This work
