--- a/symbols.tex
+++ b/symbols.tex
@@ -64,4 +64,5 @@
 \nomenclature[63]{$\Gamma$}{Gamma function.}
 \nomenclature[64]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
 \nomenclature[65]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[66]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune respectively.}
+\nomenclature[66]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
+\nomenclature[67]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
