--- a/symbols.tex
+++ b/symbols.tex
@@ -66,3 +66,4 @@
 \nomenclature[65]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
 \nomenclature[66]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune, respectively.}
 \nomenclature[67]{$\sigma^2_\theta, \sigma^2_{\Delta A}, \sigma^2_{\Delta \phi}$}{Total power of dipole, Crab Cavity RF phase, and amplitude noise respectively.} 
+\nomenclature[68]{$C_{\Delta A}, C_{\Delta \phi}$}{Correction terms to account for the dependence of the amplitude and phase noise induced emittance growth predicted from the Mastoridis--Baudrenghien model on the bunch length.} 
